<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.SignInActivity">
    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>
    <TextView
        android:id="@+id/welcome_text"
        style="@style/roboto_bold_28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="22dp"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_social_text"
        style="@style/roboto_regular_12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/sign_up_social"
        app:layout_constraintStart_toStartOf="@+id/welcome_text"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_marginEnd="22dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/view_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sign_in_social_text"
        app:layout_constraintTop_toBottomOf="@id/sign_in_social_text" />

    <EditText
        android:id="@+id/email_text"
        style="@style/roboto_regular_16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textCursorDrawable="@null"
        android:background="@drawable/edittext_bottom_line"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:paddingBottom="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/view_line"
        app:layout_constraintStart_toStartOf="@+id/view_line"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <EditText
        android:id="@+id/password_text"

        style="@style/roboto_regular_16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_bottom_line"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@id/email_text" />

    <TextView
        android:id="@+id/forget_password_text"
        style="@style/roboto_regular_12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/second_heading_text_color"
        android:text="Forgot Password?"
        app:layout_constraintEnd_toEndOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@id/password_text" />

    <LinearLayout
        android:id="@+id/layout_dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password_text">

        <TextView
            style="@style/roboto_regular_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <TextView
            style="@style/roboto_regular_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_blue_color" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="160dp"
        android:id="@+id/sign_in_button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/text_blue_color"
        android:elevation="10dp"
        app:cornerRadius="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:elevation="10dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        style="@style/roboto_bold_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>