<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/lets_get_started_text"
                    style="@style/roboto_bold_28sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Let's Get Started" />

                <TextView
                    android:id="@+id/sign_in_social_text"
                    style="@style/roboto_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/sign_up_social" />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/view_line_color" />

                <EditText
                    android:id="@+id/email_text"
                    style="@style/roboto_regular_16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_bottom_line"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/email"
                    android:textColor="@color/black"

                    android:paddingBottom="20dp" />

                <EditText
                    android:id="@+id/name_text"
                    style="@style/roboto_regular_16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_bottom_line"
                    android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/name"
                    android:textColor="@color/black"

                    android:paddingBottom="20dp" />


                <EditText
                    android:id="@+id/phone_text"
                    style="@style/roboto_regular_16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_bottom_line"
                    android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColor="@color/black"

                    android:paddingBottom="20dp" />

                <EditText
                    android:id="@+id/password_text"

                    style="@style/roboto_regular_16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittext_bottom_line"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"

                    android:paddingBottom="20dp" />

                <TextView
                    android:id="@+id/character_text"
                    style="@style/roboto_regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/al_least_8_characters"
                    android:textColor="@color/view_line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/terms_conditions_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/fields_text_hint_color"
                        android:paddingStart="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_already_have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forget_password_text">

                    <TextView
                        style="@style/roboto_regular_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/privacy_policy_signup_text_color" />

                    <TextView
                        style="@style/roboto_regular_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/text_blue_color" />
                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_button"
                    style="@style/roboto_bold_16sp"
                    app:cornerRadius="5dp"
                    android:layout_width="160dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="69dp"
                    android:backgroundTint="@color/white"
                    android:elevation="10dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/fields_text_hint_color"
                    app:elevation="10dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>