<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AppointmentFragment">

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/previous_button"
                style="@style/roboto_bold_12sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/tabs_item_background_default_color"
                android:text="@string/previous"
                android:textAllCaps="false"
                android:textColor="@color/tabs_item_default_color"
                app:cornerRadius="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/today_button"
                style="@style/roboto_bold_12sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/tabs_item_background_default_color"
                android:text="@string/today_s"
                android:textAllCaps="false"
                android:textColor="@color/tabs_item_default_color"
                app:cornerRadius="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="18dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upcoming_button"
                style="@style/roboto_bold_12sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/tabs_item_background_default_color"
                android:text="@string/upcoming"
                android:textAllCaps="false"
                android:textColor="@color/tabs_item_default_color"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/layout_button">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>