<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".activities.ConfirmationActivity">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/roboto_medium_12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/shop_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/shop_name"
                style="@style/edittext_white_rounded_hint_Match_Fix_style"
                android:gravity="center|start"
                android:hint="@string/shop_name" />

            <TextView
                style="@style/roboto_medium_12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/employee_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/employee_name"
                style="@style/edittext_white_rounded_hint_Match_Fix_style"
                android:gravity="center|start"
                android:hint="@string/shop_name" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/roboto_medium_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/date"
                        style="@style/edittext_white_rounded_hint_Match_Fix_style"
                        android:gravity="center"

                        android:textSize="10sp"
                        android:hint="@string/shop_name" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/roboto_medium_12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/time"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/time"
                        style="@style/edittext_white_rounded_hint_Match_Fix_style"
                        android:gravity="center"
                        android:textSize="10sp"
                        android:hint="@string/shop_name" />


                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/roboto_medium_12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/description"
                style="@style/edittext_white_rounded_hint_Match_Fix_style"
                android:layout_height="235dp"
                android:gravity="start"
                android:padding="10dp"
                android:hint="@string/description" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:id="@+id/confirmation_button"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/roboto_bold_16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="Confirm"
                        android:textColor="@color/text_blue_color"

                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>